# ESPace

./: .gitignore  .gitmodules  CMakeLists.txt  epoch-36-acc-98.74213836477988-model.ckpt  model.h  model.tflite  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  test.csv  wsl.sh
.github/workflows/: build.yml  docker.yml
cnn/: .dockerignore  Dockerfile  README.md  app.py  converter.py  data_test.csv  data_train.csv  dataset.py  epoch-18-acc-98.74213836477988-model.pt  epoch-28-acc-98.74213836477988-model.onnx  model.py  model_data.cc  process_data.py  pyproject.toml  script.py  train.py  util.py
cnn/data/: 0-顺.json  1-逆.json  2-不动.json
cnn/model.tf/: epoch-28-acc-98.74213836477988-model_float16.tflite  epoch-28-acc-98.74213836477988-model_float32.tflite  fingerprint.pb  saved_model.pb
cnn/model.tf/variables/: variables.data-00000-of-00001  variables.index
cnn/templates/: index.html
components/MPU6050/: CMakeLists.txt  MPU6050.h  esp-idf.h
components/button/: CMakeLists.txt
components/my_board/my_board_v1_0/: board.c  board_def.h  board_pins_config.c
html/: root.html
main/: CMakeLists.txt  CNN.cc  CNN.cpp  CNN.h  Kconfig.projbuild  cpp_header.h  espace_define.h  http_controller.c  http_controller.h  http_util.c  http_util.h  idf_component.yml  main.c  main.cpp  model.h  mpu6050.cpp  nvs_util.c  nvs_util.cpp  nvs_util.h  play_mp3.h  tftest.cc  tftest.h  user_config.h  user_define.h  user_util.cpp  user_util.h  wand_server_task.c  wand_server_task.h  wifi.c
main/peripherals/: cosine_wave.cpp  cosine_wave.h  func_wave.cpp  func_wave.h  ir_nec_encoder.c  ledc_pwm.h  ledec_pwm.cpp  mpu_device.cpp  mpu_device.h  ws2812.c  ws2812.h
main/service/: button_service.c  button_service.cpp  button_service.h  control_service.c  control_service.h  device_service.c  device_service.cpp  device_service.h  http_service.c  http_service.cpp  http_service.h  io_lock_service.cpp  io_lock_service.h  json_helper.cpp  json_helper.h  littlefs_service.c  littlefs_service.cpp  littlefs_service.h  mpu_service.cpp  mpu_service.h  tflite_service.cpp  tflite_service.h  wifi_service.c  wifi_service.cpp  wifi_service.h  ws2812_service.c  ws2812_service.cpp  ws2812_service.h
main/task/: button.c  button.cpp  button.h  handle_req_task.c  handle_req_task.cpp  handle_req_task.h  http_controller.c  http_controller.h  ir_task.c  ir_task.h  mpu_task.c  mpu_task.cpp  mpu_task.h  play_mp3.c  play_mp3.h  status_task.c  status_task.h  tflite_task.cpp  tflite_task.h  wand_server_task.c  wand_server_task.cpp  wand_server_task.h  ws2812_task.cpp  ws2812_task.h  ws_task.c  ws_task.cpp  ws_task.h
tools/: README.md
tools/docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
