[project]
name = "cnn"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xizeyoupan", email = "44920131+xizeyoupan@users.noreply.github.com"},
]
dependencies = ["tensorflowjs>=4.22.0", "flask>=3.1.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
