idf_component_register(
    SRCS
    "user_util.cpp"
    "main.cpp"
    "./task/play_mp3.c"
    "./task/button.cpp"
    "./task/handle_req_task.cpp"
    "./task/mpu_task.cpp"
    "./task/tflite_task.cpp"
    "./task/wand_server_task.cpp"
    "./task/ws_task.cpp"
    "./task/ws2812_task.cpp"
    "./task/ir_task.c"
    "./service/wifi_service.cpp"
    "./service/json_helper.cpp"
    "./service/io_lock_service.cpp"
    "./service/button_service.cpp"
    "./service/http_service.cpp"
    "./service/littlefs_service.cpp"
    "./service/ws2812_service.cpp"
    "./service/mpu_service.cpp"
    "./service/tflite_service.cpp"
    "./peripherals/ir_nec_encoder.c"
    "./peripherals/ledec_pwm.cpp"
    "./peripherals/cosine_wave.cpp"
    "./peripherals/func_wave.cpp"
    INCLUDE_DIRS
    "."
    "./service"
    "./task"
    "./peripherals"
)

# littlefs_create_partition_image(models ../flash_data FLASH_IN_PROJECT)
